fixing mode button on mobile

--- a/Club_Butterfly/general.css
+++ b/Club_Butterfly/general.css
@@ -56,10 +56,9 @@ button img {
 }
 
 .mobile #modeBtn {
-    min-width: 50px;
-    min-height: 50px;
     width: 100px;
-    padding: 10px;
+    height: 100px;
+    padding: 20px;
 }
 
 .light-mode #modeBtn {
